added sassybase lessons/steps

--- a/sassy-base-step5-layout/prepros-6.config
+++ b/sassy-base-step5-layout/prepros-6.config
@@ -1,17 +1,10 @@
 {
-  "name": "my_theme-wp",
+  "name": "sassy-base-step5-layout",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [
-    {
-      "path": "sass/style.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"style.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
-    }
-  ],
+  "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [
-      "sass"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -26,110 +19,14 @@
   },
   "imports": [
     {
-      "path": "sass/style.scss",
+      "path": "scss/style.scss",
       "imports": [
-        "sass/variables-site/_variables-site.scss",
-        "sass/mixins/_mixins-master.scss",
-        "sass/_normalize.scss",
-        "sass/typography/_typography.scss",
-        "sass/elements/_elements.scss",
-        "sass/forms/_forms.scss",
-        "sass/navigation/_navigation.scss",
-        "sass/modules/_accessibility.scss",
-        "sass/modules/_alignments.scss",
-        "sass/modules/_clearings.scss",
-        "sass/site/secondary/_widgets.scss",
-        "sass/site/_site.scss",
-        "sass/modules/_infinite-scroll.scss",
-        "sass/media/_media.scss",
-        "sass/variables-site/_colors.scss",
-        "sass/variables-site/_typography.scss",
-        "sass/variables-site/_structure.scss",
-        "sass/variables-site/_columns.scss",
-        "sass/typography/_headings.scss",
-        "sass/typography/_copy.scss",
-        "sass/elements/_lists.scss",
-        "sass/elements/_tables.scss",
-        "sass/forms/_buttons.scss",
-        "sass/forms/_fields.scss",
-        "sass/navigation/_links.scss",
-        "sass/navigation/_menus.scss",
-        "sass/layout/_content-sidebar.scss",
-        "sass/layout/_sidebar-content.scss",
-        "sass/site/primary/_posts-and-pages.scss",
-        "sass/site/primary/_comments.scss",
-        "sass/media/_captions.scss",
-        "sass/media/_galleries.scss"
-      ]
-    },
-    {
-      "path": "sass/woocommerce.scss",
-      "imports": [
-        "sass/variables-site/_variables-site.scss",
-        "sass/mixins/_mixins-master.scss",
-        "sass/shop/_tables.scss",
-        "sass/shop/_products.scss",
-        "sass/shop/_single-product.scss",
-        "sass/shop/_checkout.scss",
-        "sass/shop/_components.scss",
-        "sass/shop/_widgets.scss",
-        "sass/variables-site/_colors.scss",
-        "sass/variables-site/_typography.scss",
-        "sass/variables-site/_structure.scss",
-        "sass/variables-site/_columns.scss"
-      ]
-    },
-    {
-      "path": "sass/elements/_elements.scss",
-      "imports": [
-        "sass/elements/_lists.scss",
-        "sass/elements/_tables.scss"
-      ]
-    },
-    {
-      "path": "sass/forms/_forms.scss",
-      "imports": [
-        "sass/forms/_buttons.scss",
-        "sass/forms/_fields.scss"
-      ]
-    },
-    {
-      "path": "sass/media/_media.scss",
-      "imports": [
-        "sass/media/_captions.scss",
-        "sass/media/_galleries.scss"
-      ]
-    },
-    {
-      "path": "sass/navigation/_navigation.scss",
-      "imports": [
-        "sass/navigation/_links.scss",
-        "sass/navigation/_menus.scss"
-      ]
-    },
-    {
-      "path": "sass/site/_site.scss",
-      "imports": [
-        "sass/layout/_content-sidebar.scss",
-        "sass/layout/_sidebar-content.scss",
-        "sass/site/primary/_posts-and-pages.scss",
-        "sass/site/primary/_comments.scss"
-      ]
-    },
-    {
-      "path": "sass/typography/_typography.scss",
-      "imports": [
-        "sass/typography/_headings.scss",
-        "sass/typography/_copy.scss"
-      ]
-    },
-    {
-      "path": "sass/variables-site/_variables-site.scss",
-      "imports": [
-        "sass/variables-site/_colors.scss",
-        "sass/variables-site/_typography.scss",
-        "sass/variables-site/_structure.scss",
-        "sass/variables-site/_columns.scss"
+        "scss/partials/_toc.scss",
+        "scss/partials/_typography.scss",
+        "scss/partials/_components.scss",
+        "scss/partials/_media.scss",
+        "scss/partials/_layout.scss",
+        "scss/partials/_structure.scss"
       ]
     }
   ],
@@ -137,7 +34,7 @@
     "selectedView": "file-tree"
   },
   "fileWatcher": {
-    "enabled": false,
+    "enabled": true,
     "watchedExtensions": [
       "less",
       "sass",
@@ -175,7 +72,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7885,
+    "port": 7893,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
@@ -195,10 +92,10 @@
     "delay": 0
   },
   "ftp-deploy": {
-    "connectionType": "sftp",
-    "remotePath": "/home1/egargiul/public_html/nma/test10/wp-content/themes/my_theme-wp/",
+    "connectionType": "ftp",
+    "remotePath": "",
     "uploadTimeout": 20000,
-    "uploadOnChange": true,
+    "uploadOnChange": false,
     "ftp": {
       "secure": false,
       "keepAlive": true,
@@ -208,11 +105,11 @@
       "password": ""
     },
     "sftp": {
-      "host": "egargiulo.com",
+      "host": "",
       "port": 22,
       "usePrivateKey": false,
-      "username": "egargiul",
-      "password": "z3Bluehost666;",
+      "username": "",
+      "password": "",
       "privateKey": "",
       "passphrase": ""
     },
@@ -242,26 +139,7 @@
       "*.kit",
       "*.ts"
     ],
-    "history": [
-      {
-        "file": "style.css",
-        "ctime": "2017-10-31T10:28:30.218Z",
-        "mtime": "2017-10-31T10:28:30.218Z",
-        "size": 18471
-      },
-      {
-        "file": "header.php",
-        "ctime": "2017-10-31T10:29:43.441Z",
-        "mtime": "2017-10-31T10:29:43.441Z",
-        "size": 1956
-      },
-      {
-        "file": "footer.php",
-        "ctime": "2017-10-31T10:21:15.925Z",
-        "mtime": "2017-10-31T10:21:15.925Z",
-        "size": 680
-      }
-    ]
+    "history": []
   },
   "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
@@ -375,5 +253,5 @@
     }
   },
   "file-type-png": "{\"compilers\":[\"png\"]}",
-  "file-type-jpg": "{\"compilers\":[\"jpg\"]}"
+  "file-type-jpg": "{\"compilers\":[\"jpg\"],\"compiler-jpg\":{\"enabled\":true,\"originalSize\":0,\"newSize\":0}}"
 }
