sassybase 2020 updates and student site 2021

--- a/my_theme-wp/prepros-6.config
+++ b/my_theme-wp/prepros-6.config
@@ -190,7 +190,7 @@
     "scroll": true
   },
   "live-reload": {
-    "enable": true,
+    "enable": false,
     "animate": true,
     "delay": 0
   },
